Added news component and refactoring

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,7 @@
 {
   "pages": {
-    "main": "Main",
+    "main": "About us",
+    "news": "News",
     "services": "Services",
     "documents": "Documents",
     "contacts": "Contacts"
