--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -4,7 +4,7 @@
     "main": "О нас",
     "news": "Новости",
     "services": "Наши Услуги",
-    "documents": "Документы и Отчетность",
+    "documents": "Документы",
     "contacts": "Контакты"
   },
   "login": {
@@ -42,6 +42,12 @@
       "type1": "Тип 1",
       "type2": "Тип 2"
     }
+  },
+  "news": {
+    "add-news": "Добавить новость",
+    "no-news": "Новостей нет",
+    "save": "Сохранить",
+    "exit": "Выйти"
   },
   "contacts": {
     "address-title": "Адрес",
