--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -27,13 +27,9 @@
   },
   "documents": {
     "search": "Поиск по Документам",
-    "no-results": "Нет результатов",
+    "no-results": "Нет Результатов",
     "upload-documents": "Загрузить Документы",
-    "logout": "Выйти",
-    "types": {
-      "type1": "Тип 1",
-      "type2": "Тип 2"
-    }
+    "logout": "Выйти"
   },
   "news": {
     "add-news": "Добавить новость",
@@ -46,7 +42,7 @@
     "address": "Lorem ipsum dLorem ipsum dolor sit amet, consectetur adipisicing elit",
     "phones-title": "Телефоны",
     "mail-title": "Почта",
-    "directions": "Схема проезда",
+    "directions": "Схема Проезда",
     "by-car": "На Машине",
     "by-car-route": "Lorem ipsum dLorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis impedit quia repellat sed! Ab amet, aperiam culpaolor sit amet, co, conse minus mollitia necessitatibus officia porro quam quas quidem repellat sequi, similique sint tenetur ullam, voluptatem voluptatum? Architecto do",
     "by-public-transport": "На Общественном Транспорте",
