--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,5 +1,6 @@
 {
   "address": "Россия, Москва, адрес, 123433",
+  "title": "СОЛНЕЧНАЯ ГЕНЕРАЦИЯ Х",
   "pages": {
     "main": "О нас",
     "news": "Новости",
